          library. Although still experimental, this works quite great.

        - Added new CHCP command to handle efficiently the new libcu8 library.

MONDAY, 25TH, JUNUARY

        - Changed version of Dos9 to emphasize the important changes of Dos9 
          since new year 2016.

        - Added functions to restrict fd inheritance, to make sure the 
          appropriate fds are closed on exec. It is basically usefull for FOR 
          commands.

        - Hugely modified the libcu8 to fit with libDos9. It is still an 
          experimental, though, but it works way better now.

        - Added some new behaviours in file expansion. Now, it is legal to 
          specify negative offsets during variable expansion. Quickly, 
          negative offsets refers to the absolute value of the offset, counted 
          from the end of the variable. For instance, this is now allowed :

             %var:~-2,-1%

THURSDAY, 28TH, JUNUARY

        - Added an option that allow using switch catened with commands, such 
          as

             set/p var=question

        - Fixed and modified hugely the dump command so that it is way more 
          portable.

SUNDAY, 7TH, FEBRUARY

        - Fixed some bugs with the FOR command.

        - Fixed some bugs in redirections.

        - Fixed littles bugs in libcu8.

THURSDAY 18TH, FEBRUARY

        - Added the '=' operator for the SET command. The operator do behave a 
          little bit differently from cmd.exe's SET, but it is convinient too. 
          For the moment, libmatheval only supports explicit number anyway.

MONDAY 16TH, APRIL

        - Modified the initialization procedure of Dos9. Dos9 can now handle 
          two different startup files:

             - $HOME/.dos9/Dos9_Auto.bat : user-specific startup file

             - $DOS9_PATH/Dos9_Auto.bat : system-wide startup file

        - Fixed some bugs with SET and redirections.

        - still develloping dos9ize 
