@@ -1317,3 +1317,9 @@ ${set/p var=question}
     - still develloping dos9ize
 
     - Fixed errors with folders containing spaces for Dos9. 
+	
+{{Friday 15th, July 2015}}
+
+	- Fixed a little bug with the for command. When the field "delims=;" is specified
+	with {FOR} without "eol=" being specified, then the character ";" is not used
+	as the default end-of-line character.
