@@ -1467,5 +1467,13 @@ MONDAY 16TH, APRIL
 
         - Fixed some bugs with SET and redirections.
 
-        - still develloping dos9ize 
+        - still develloping dos9ize
+
+        - Fixed errors with folders containing spaces for Dos9. 
+
+FRIDAY 15TH, JULY 2015
+
+        - Fixed a little bug with the for command. When the field "delims=;" 
+          is specified with FOR without "eol=" being specified, then the 
+          character ";" is not used as the default end-of-line character. 
 
